# FastMQ

./: .gitignore  README.md  buffer.db  config.ini  pyproject.toml  requirements.txt
core/: __init__.py  buffer.py  cli.py  configurator.py  http_api.py  ibuffer.py  imanagers.py  imessage_queue.py  logger.py  main.py  managers.py  message_queue.py  source.py  units.py
tests/: old_test_server.py  test_buffer.py  test_managers.py  test_rombuffer.py  test_server.py
